# aml-monitoring-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py
frontend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Layout.tsx  Toast.tsx  ui.tsx
frontend/src/lib/: api.ts  id.ts  types.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  RiskPage.tsx  TransactionsPage.tsx
scripts/: offline_score.py  seed_db.py  train_models.py
src/aml_monitoring_system/: 001_initial_schema.sql  002_add_graph_tables.py  003_add_audit_log.py  LICENSE.txt  README.md  __about__.py  __init__.py  aml_rules_engine.py  audit.py  conftest.py  docker-compose.yml  env.py  graph_analysis.py  graph_node.py  main.py  middleware.py  pyproject.toml  risk_engine.py  sample_payloads.py  test_alerts.py  test_middleware_and_audit.py  test_security.py  train.py  transaction_service.py
src/app/: __init__.py  config.py  main.py  middleware.py
src/app/core/: audit.py  exceptions.py  logging.py
src/app/db/: session.py
src/app/ml/: features.py  predict.py  train.py
src/app/models/: __init__.py  alert.py  country_risk.py  graph_edge.py  graph_node.py  pep_profile.py  risk_score.py  transaction.py  user.py
src/app/schemas/: alert_schema.py  auth_schema.py  explain_schema.py  risk_schema.py  transaction_schema.py
src/app/services/: alert_service.py  aml_rules_engine.py  country_risk_service.py  explain_service.py  graph_analysis.py  pep_service.py  risk_engine.py  risk_explain.py  transaction_service.py
tests/: __init__.py  conftest.py  test_alerts.py  test_middleware_and_audit.py
(+11 files in other folders)
